<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ComicStrip</string>
    <string name="hello_world">Hello world!</string>
    <string name="comic_strip">Comic Strip</string>
    <string name="comic_pic">Comic pic</string>
    <string name="button">Button</string>
    <string name="make_your_own_comic_click_here">Make your own Comic! CLick here</string>
    <string name="data"></string>
    <string name="start_now_">Start Now!</string>
    <string name="title_activity_template_page">TemplatePage</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="img_1">img 1</string>
    <string name="title_activity_image1">Image1</string>
    <string name="title_activity_test">Test</string>
    <string name="kkkk">kkkk</string>
    <string name="title_activity_image3">Image3</string>
    <string name="title_activity_image4">Image4</string>
    <string name="image1">image1</string>
    <string name="crop_image">crop_image</string>
    <string name="title_activity_camera_capture">CameraCapture</string>
    <string name="finalimage">final image</string>
    <string name="create_my_comic_">Create my comic!</string>
    <string name="ok">abc</string>
    <string name="how_to_select_and_crop_image">Select and Crop</string>
    <string name="todo">Button</string>
    <string name="select_image">Select Image</string>
    <string name="title_activity_template_mainactivity">main activity</string>
    <string name="title_activity_template_cropselector">CropSElector</string>
    <string name="title_activity_crop_selector">Crop Selector</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="share">Share</string>

</resources>
